--- a/.abf.yml
+++ b/.abf.yml
@@ -1,3 +1,3 @@
 sources:
-  "carolmin-ps.doc.tar.xz": 5caecf6d015b604df2bd5214c294e633a6a297db
-  "carolmin-ps.tar.xz": 32786956781b21c36d25f47717a8326b2944072d
+  carolmin-ps.doc.tar.xz: 36ffa3c860bbf78b307c65c08b4311e240eab28d
+  carolmin-ps.tar.xz: e756e5e11ef1b9880c6fc8a6ee9a34796cf1c8b6
